Added vendor js code json2.js from Douglas Crockford, a dependency of backbone for using backbone views. Added this script to the base template. UI enhancements

--- a/app_pkg/blueprints/web/templates/base.html
+++ b/app_pkg/blueprints/web/templates/base.html
@@ -75,6 +75,7 @@
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js')}}"></script>
         <script src="{{url_for('static', filename='vendor/underscore-min.js')}}"></script>
+        <script src="{{url_for('static', filename='vendor/json2.js')}}"></script>
         <script src="{{url_for('static', filename='vendor/backbone-min.js')}}"></script>
         <script>
             SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
