--- a/app_pkg/blueprints/web/templates/navbar.html
+++ b/app_pkg/blueprints/web/templates/navbar.html
@@ -29,7 +29,7 @@
           {% else %}
           <li>
           <li><button id="login_btn" class="btn btn-primary">Login</button></li>
-          <li><button id="signup_btn" class="btn btn-warning">Signup</button></li>
+          <li><button id="signup_btn" class="btn btn-success">Signup</button></li>
           
           {% endif %}
         </ul>
