--- a/app_pkg/static/css/base.css
+++ b/app_pkg/static/css/base.css
@@ -39,6 +39,11 @@ body {
 	background-image: url('../img/gray_jean.png');
 }
 
+.navbar_profile_img {
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
 .container {
 	margin: 0px;
 }
