Very simplistic implementation of a client side MVC framework.

--- a/app_pkg/blueprints/web/templates/question_list.html
+++ b/app_pkg/blueprints/web/templates/question_list.html
@@ -22,6 +22,14 @@
 
   <p>Questions Page</p>
 
+  <ul>
+  	<li>Stuff</li>
+  </ul>
+
+  <div id="play">
+  	<p>Content<p>
+  </div>
+
 {% endblock content %}
 
 {% block footer %}
