--- a/app_pkg/blueprints/web/templates/meta/contact.html
+++ b/app_pkg/blueprints/web/templates/meta/contact.html
@@ -8,7 +8,7 @@
 
 {% block head_styles %}
   {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static', filename='css/question_list.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='css/meta.css')}}">
 {% endblock %}
 
 {% block head_scripts %}
@@ -19,16 +19,19 @@
 
 {% block content %}
   {{ super() }}
+  
+  <div class="row-fluid">
 
-  <p>Questions Page</p>
+    <div class="hero-unit span11 offset1 front-panel">
+      <h1>Contact</h1>
+      <br>
+      <ul>
+        <li>Dalton Hubble <a href="mailto:dhubble@mit.edu">dhubble@mit.edu</a></li>
+        <li>Thomas Garver <a href="mailto:tgarv@mit.edu">tgarv@mit.edu</a></li>
+      </ul>
 
-  <ul>
-  	<li>Stuff</li>
-  </ul>
-
-  <div id="play">
-  	<p>Content<p>
-  </div>
+    </div> 
+  </div>  
 
 {% endblock content %}
 
@@ -38,5 +41,4 @@
 
 {% block tail_scripts %}
     {{ super() }}
-<script data-main="{{url_for('static', filename='js/question_list.js')}}" src="{{url_for('static', filename='js/require.js')}}"></script>
 {% endblock tail_scripts %}
