User creation and logins are now functional and the base and navbar have been updated. New color scheme now in use.

--- a/app_pkg/blueprints/web/templates/navbar.html
+++ b/app_pkg/blueprints/web/templates/navbar.html
@@ -37,11 +37,8 @@
         <ul class="nav">
 
           {% if session['user'] %}
-          <form class="navbar-search">
-            <input type="text" class="span2 search-query" placeholder="Search">
-          </form>
-          <li><a href="{{ url_for('web.question_list') }}">Browser Questions</a></li>
-          <li><a href="{{ url_for('web.ask') }}">Ask</a></li>
+          <li><a href="{{ url_for('web.question_list', username=session.user.username) }}">Questions</a></li>
+          <li><a href="{{ url_for('web.user_list') }}">Users</a></li>
           {% endif %}
         </ul>
 
