--- a/app_pkg/blueprints/web/templates/base.html
+++ b/app_pkg/blueprints/web/templates/base.html
@@ -38,11 +38,8 @@
             {% include 'navbar.html' %}
             
             {% block content %}
-            <div class="container">
 
             {% endblock content %}
-            <!-- End of container -->
-            </div>
 
             <div id="push"></div>
         </div><!--End Wrap-->
@@ -53,7 +50,7 @@
                 <div class="row">
                     <div class="span4 offset1">
                         <p>
-                        <a href="#">Code Blue</a> &copy; Copyright 2013 
+                        <a href="{{ROOT_ADDRESS}}">Code Blue</a> &copy; Copyright 2013 
                         </p>
                     </div>
                     <div class="span4 offset3">
@@ -81,7 +78,6 @@
             SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
             ROOT_ADDRESS = "{{ ROOT_ADDRESS }}";
             GOOGLE_API_KEY = "{{ GOOGLE_API_KEY }}";
-            console.log(SCRIPT_ROOT);
         </script>
         {% endblock tail_scripts %}        
     </body>
