--- a/app_pkg/static/css/index.css
+++ b/app_pkg/static/css/index.css
@@ -1,7 +1,79 @@
+html, body {
+	background-image: none;
+	background-color: #03417C;
+	padding: 0px;
+}
+
+
 .login_btn {
 	margin-left: 0px;
 }
 
 .signup_btn {
 	margin-left: 0px;
+}
+
+#map_region {
+	margin-left: 0px;
+	width: 100%;
+	position: relative;
+	overflow: none;
+}
+
+#map_region img {
+	margin-left: 0px;
+	width: 100%;
+}
+
+.hero-unit {
+	padding-top: 20px;
+	padding-bottom: 120px;
+}
+
+.standout-region {
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+}
+
+.standout-region div{
+	background-color: #F5F5F5;
+}
+
+.standout-region h1 {
+	color: #636363;
+}
+
+#signup-div {
+	background-color: #F5F5F5;
+	position: absolute;
+	top: 30px;
+	right: -20px;
+	padding: 20px;
+	border-radius: 10px 0px 0px 10px;
+	-moz-border-radius: 10px 0px 0px 10px;
+	-webkit-border-top-left-radius: 10px;
+	-webkit-border-top-right-radius: 0px;
+	-webkit-border-bottom-left-radius: 10px;
+	-webkit-border-bottom-right-radius: 0px;
+	width: 280px;
+}
+
+#login-div {
+	background-color: #F5F5F5;
+	position: absolute;
+	top: 20px;
+	right: -330px;
+	padding: 20px;
+	border-radius: 10px 0px 0px 10px;
+	-moz-border-radius: 10px 0px 0px 10px;
+	-webkit-border-top-left-radius: 10px;
+	-webkit-border-top-right-radius: 0px;
+	-webkit-border-bottom-left-radius: 10px;
+	-webkit-border-bottom-right-radius: 0px;
+	width: 280px;
+}
+
+#wrap {
+	overflow: hidden;
 }
