PUT requests on Users are verified to work. Sending a single PUT request to update the authenticated user's latitude and longitude each time the question list page is loaded. Need to tweak this to do this repeatedly in an anonymous recursive function. Note that if multiple clients are sending PUT requests concurrently, this will cause the location kept in the database to hop back and forth between the two - the web interface does not currently listen to live latitude/longitude information so this hoping is not a problem.

--- a/app_pkg/blueprints/web/templates/question_detail.html
+++ b/app_pkg/blueprints/web/templates/question_detail.html
@@ -38,6 +38,7 @@
         </div>
 
         <div id="answer-display-region">
+          <h2>Answers</h2>
         </div>
     
       </div>
@@ -46,6 +47,7 @@
       <div id="side_content" class="span4">
 
         <div id="question-stats-region">
+          <h2>Question</h2>
         </div>
 
         <div id="users-region">
