--- a/app_pkg/blueprints/web/templates/question_list.html
+++ b/app_pkg/blueprints/web/templates/question_list.html
@@ -82,6 +82,7 @@
 {% block tail_scripts %}
     {{ super() }}
 <script>
+      USER_ID = {{user_id}};
       // A change to the web interface urls.py will also update the URL base used by JS for redirection to individual questions and users.
       WEB_QUESTION_URL = "{{url_for('web.question_detail', question_id=0)}}".split("/").slice(0,-1).join('/') + '/';
       WEB_USER_URL = "{{url_for('web.question_list', username='username')}}".split("/").slice(0,-1).join('/') + '/';     
