Fixed a bug in the web interface where other users answers did not link to their profile. Now the User listing shows all Users excluding the authenticated User. The custom API routes are now session authenticated so making requests while unauthenticated is not possible (except the /api/user_create and /api/user_authenticate routes). The REST API does not have session authentication turned on.

--- a/app_pkg/blueprints/web/templates/user_list.html
+++ b/app_pkg/blueprints/web/templates/user_list.html
@@ -53,8 +53,9 @@
 {% block tail_scripts %}
     {{ super() }}
     <script>
-      // A change to the web interface urls.py will also update the URL base used by JS for redirection to individual questions and users.
-      WEB_USER_URL = "{{url_for('web.question_list', username='username')}}".split("/").slice(0,-1).join('/') + '/';     
+    USER_ID = {{user_id}};
+    // A change to the web interface urls.py will also update the URL base used by JS for redirection to individual questions and users.
+    WEB_USER_URL = "{{url_for('web.question_list', username='username')}}".split("/").slice(0,-1).join('/') + '/';     
     </script>
 <script data-main="{{url_for('static', filename='js/user_list.js')}}" src="{{url_for('static', filename='js/require.js')}}"></script>
 {% endblock tail_scripts %}
