--- a/app_pkg/static/css/question_list.css
+++ b/app_pkg/static/css/question_list.css
@@ -33,10 +33,6 @@ textarea {
 	max-height: 400px;
 }
 
-#question-display-region {
-	min-height: 600px;
-}
-
 #question-creator-region {
 	padding: 20px;
 	background-color: #CFCFCF;
@@ -45,11 +41,16 @@ textarea {
 	-webkit-border-radius: 5px;
 }
 
+#global-question-display-region {
+	min-height: 300px;
+}
 
+#user-question-display-region {
+	min-height: 300px;
+}
 
-
-img.posting-photo {
-	margin-top: 15px;
+#page-owner-question-display-region {
+	min-height: 600px;
 }
 
 
