The question detail page (from cliking Answers on the question listing page for a particular question) now centers the map on where the Question was pinned. Moved the GCM push notification snippet for the REST API into a question_post_postprocessor so notifications only sent when a Question is successfully created.

--- a/app_pkg/blueprints/web/templates/question_list.html
+++ b/app_pkg/blueprints/web/templates/question_list.html
@@ -36,7 +36,7 @@
 
         {% if session['user'].id == page_for.id %}
 
-        <div id="question-creator-region" class="well">
+        <div id="question-creator-region" class="well span11">
         </div>
 
         <div id="global-question-display-region">
