Updates to web interface templates such as in index page, navbar, and the meta pages now appear nicer.

--- a/app_pkg/blueprints/web/templates/index.html
+++ b/app_pkg/blueprints/web/templates/index.html
@@ -55,7 +55,7 @@
 
   <div id="hero-unit" class="hero-unit">
       <h1>Geotarget your Q &amp; A</h1><br>
-      <p>Ask Questions of users who are actually able to give you an answer. Help others get their questions answered in real time.</p>
+      <p>Ask Questions of locals. Share knowledge of your home turf or your current surroundings. Get answers in real-time</p>
       <p><a id="learn-more-scroll" class="btn btn-primary btn-large">Learn More <i class='icon-chevron-down'></i></a></p>
   </div>
 
@@ -65,17 +65,17 @@
 
         <div class="span4 well">
           <h1>Android</h1>
-          <p class="lead">Download the Android Application <a href="#">here</a> so you can easily post and receive notifications about geo-targeted questions and answers while on the go.</p>
+          <p class="lead">Install <a href="#">Android App</a> to ask and answer on the go and receive real-time notificaitons.</p>
         </div>
 
         <div class="span4 well">
           <h1>Collaborative</h1>
-          <p class="lead">Earn karma and help those in your comunity by using your knowldge of what's around you to answer the questions of others.</p>
+          <p class="lead">Help those in your comunity using your knowldge of your city and your current surroundings.</p>
         </div>
 
         <div class="span4 well">
           <h1>Dynamic</h1>
-          <p class="lead">Never refresh to see live content - its all kept up to date so you can focus on asking and answering.</p>
+          <p class="lead">Never refresh to see live content, everything is up-to-date, so focus on asking and answering.</p>
         </div>
 
       </div>
