--- a/app_pkg/blueprints/web/templates/meta/contact.html
+++ b/app_pkg/blueprints/web/templates/meta/contact.html
@@ -19,18 +19,23 @@
 
 {% block content %}
   {{ super() }}
+
+  <div class="container-fluid">
   
-  <div class="row-fluid">
+    <div class="row-fluid">
 
-    <div class="hero-unit span11 offset1 front-panel">
-      <h1>Contact</h1>
-      <br>
-      <ul>
-        <li>Dalton Hubble <a href="mailto:dhubble@mit.edu">dhubble@mit.edu</a></li>
-        <li>Thomas Garver <a href="mailto:tgarv@mit.edu">tgarv@mit.edu</a></li>
-      </ul>
+      <div class="hero-unit span10 offset1 front-panel">
+        <h1>Contact</h1>
+        <br>
+        <ul>
+          <li>Dalton Hubble <a href="mailto:dhubble@mit.edu">dhubble@mit.edu</a></li>
+          <li>Thomas Garver <a href="mailto:tgarv@mit.edu">tgarv@mit.edu</a></li>
+        </ul>
 
-    </div> 
+      </div> 
+
+    </div>
+
   </div>  
 
 {% endblock content %}
