--- a/app_pkg/blueprints/web/templates/meta/privacy.html
+++ b/app_pkg/blueprints/web/templates/meta/privacy.html
@@ -20,16 +20,21 @@
 {% block content %}
   {{ super() }}
 
-  <div class="row-fluid">
+  <div class="container-fluid">
 
-    <div class="hero-unit span11 offset1 front-panel">
-      <h1>Privacy Policy</h1>
-      <br>
-      <p>We're not going to distribute, sell, or do sketchy things with data you generate on our site. That's not how we work.</p>
-           
+    <div class="row-fluid">
+
+      <div class="hero-unit span10 offset1 front-panel">
+        <h1>Privacy Policy</h1>
+        <br>
+        <p>We're not going to distribute, sell, or do sketchy things with data you generate on our site. That's not how we work.</p>
+             
+
+      </div>
 
     </div> 
-  </div> 
+
+  </div>
 
 
 {% endblock content %}
