--- a/app_pkg/blueprints/web/templates/meta/about.html
+++ b/app_pkg/blueprints/web/templates/meta/about.html
@@ -20,15 +20,20 @@
 {% block content %}
   {{ super() }}
 
-  <div class="row-fluid">
+  <div class="container-fluid">
 
-    <div class="hero-unit span11 offset1 front-panel">
-      <h1>About Us</h1>
-      <br>
-      <p>Code Blue was built as a part of a student UROP project at CSAIL.</p>
+    <div class="row-fluid">
+
+      <div class="hero-unit span10 offset1 front-panel">
+        <h1>About Us</h1>
+        <br>
+        <p>Code Blue was built as a part of a student UROP project at CSAIL.</p>
+
+      </div> 
 
     </div> 
-  </div> 
+
+  </div>
 
 {% endblock content %}
 
